--- a/ideology.Rmd
+++ b/ideology.Rmd
@@ -453,13 +453,20 @@ wordcloud(top_words_single$term, top_words_single$n,
          max.words = 100,scale=c(2, .2), random.order = FALSE, random.color = FALSE,colors =orange_gradient)
 ```
 
-The founding philosophy describes the group's mission, raison d'etre and epistemological concerns. To investigate the similarities and differences in missions across the ideologies, the word clouds above show the most frequent terms used in describing the founding philosophies of different idologies, colour coded by ideology type.
+Moving on from the factors influencing states' susceptibility to attacks, we now investigate what drives the different terrorism groups to operate and identify similarities and differences in their missions. 
 
-Comparing the terms used in the founding philosophy across the 5 dominant ideologies, there appears to be a common theme of race driving the 5 ideologies, while each taking a different stance, suggestive of groups under these ideologies sparked by racial discontent. Examining the top race-affiliated words for each ideology, there is an apparent difference in racial stance for the first 4 ideologies, with Right-Wing groups focusing on "white", Left-Wing groups focusing on "black", Religious groups on "muslim" and Ethno-nationalist on "jewish'.
+The founding philosophies of terrorism groups describe the group's mission and epistemological concerns. To analyse the similarities and differences in missions across the 5 dominant ideologies, the word clouds here show the most frequent terms used in describing the founding philosophies of different ideologies, colour coded by ideology type.
 
-In addition, there appears to be a common theme of religion with the Right-Wing and Religious groups, with common top words like "christian", albeit the latter ideology having missions mostly related to "islam".
+Comparing the terms used in the founding philosophies by ideology, there appears to be a common theme of  'race' and 'religion' driving ideologies, while each taking a different stance. This may point to a common trend of terrorism groups sparked by racial discontent or religion, especially rampant given the high frequency of race and religion-affiliated words in most of the word clouds. 
 
-Moreover, the Left-Wing and Ethno-nationalist appear to have similar philosophies driven by missions for freedom with words like "struggle", "oppressed" and "independence", while the Right-Wing has more "political" and "federal" concerns. 
+Firstly, Right-Wing and Left-Wing groups tend to be mostly driven by racial missions, with the theme of 'race' most common in these 2 ideologies. Unsurprisingly, there are apparent differences in their racial stances, with Right-Wing groups focusing on 'white', and Left-Wing groups focusing on 'black'.
 
-Lastly, the Single Issue groups appear to be driven by a wide spectrum of concerns, with similar concerns with the other ideologies like "government" and "liberation", but also entirely different issues such as "animal", "cuban" and "environment".
+Next, the common theme of religion is more apparent amongst the Right-Wing, Religious and Ethno-nationalist groups, but again with different stances. While Right-Wing groups have missions geared towards Christianity with top words like 'christian', Religious groups tend to have missions focusing on 'islam', and Ethno-nationalist groups on 'jewish'.
+
+In addition, examining other themes, the Left-Wing and Ethno-nationalist ideologies appear to have similar philosophies driven by missions for freedom with words like 'struggle', 'oppressed' and 'independence'. This may provide basis for potential connections between groups under these 2 ideologies, given some overlaps of similar philosophies. On the other hand, the Right-Wing groups have more 'political' and 'federal' concerns, and may thus be more independent in their missions overall.
+
+Lastly, the Single Issue groups appear to be driven by a wide spectrum of concerns, with similar concerns with the other ideologies like 'government' and 'liberation', but also entirely different issues such as 'animal', 'cuban' and 'environment'.
+
+Overall, these similarities and differences in ideologies may provide basis for connections between certain terrorism groups and in turn, influence how they operate.
+
 
